src/Base/main/default/objects/Lead_Submission_History__c/Lead_Submission_History__c.object-meta.xml
<CustomObject>
    <description>Historical lead form submission records.</description>
    <label>Lead Submission History</label>
    <nameField>
        <label>Lead Submission History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Submissions History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>