src/Base/main/default/objects/Lead_Submission_History__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lead Submission Histories (Account)</relationshipLabel>
    <relationshipName>Lead_Submission_Histories1</relationshipName>
    <type>Lookup</type>
</CustomField>