src/Base/main/default/objects/Lead_Submission_History__c/fields/Boat_Model__c.field-meta.xml
<CustomField>
    <fullName>Boat_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Boat Model</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Lead Submission Histories</relationshipLabel>
    <relationshipName>Lead_Submission_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>