src/Base/main/default/objects/Lead_Submission_History__c/fields/Boat_Name__c.field-meta.xml
<CustomField>
    <fullName>Boat_Name__c</fullName>
    <label>Boat Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>