src/Base/main/default/objects/Lead_Submission_History__c/fields/Boat_Series__c.field-meta.xml
<CustomField>
    <fullName>Boat_Series__c</fullName>
    <label>Boat Series</label>
    <length>150</length>
    <type>Text</type>
</CustomField>