src/Base/main/default/objects/Lead_Submission_History__c/fields/Boat_Type__c.field-meta.xml
<CustomField>
    <fullName>Boat_Type__c</fullName>
    <label>Boat Type</label>
    <length>150</length>
    <type>Text</type>
</CustomField>