src/Base/main/default/objects/Lead_Submission_History__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Lead Submission Histories</relationshipLabel>
    <relationshipName>Lead_Submission_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>