src/Base/main/default/objects/Lead_Submission_History__c/fields/Closest_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Closest_Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closest Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lead Submission Histories</relationshipLabel>
    <relationshipName>Lead_Submission_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>