src/Base/main/default/objects/Lead_Submission_History__c/fields/Conversion_Id__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Id__c</fullName>
    <label>Conversion Id</label>
    <length>150</length>
    <type>Text</type>
</CustomField>