src/Base/main/default/objects/Lead_Submission_History__c/fields/Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead ID</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead Submission Histories</relationshipLabel>
    <relationshipName>Lead_Submission_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>