src/Base/main/default/objects/Lead_Submission_History__c/fields/Lead_Notification_Pending__c.field-meta.xml
<CustomField>
    <fullName>Lead_Notification_Pending__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Lead Notification Pending</label>
    <type>Checkbox</type>
</CustomField>