src/Base/main/default/objects/Lead_Submission_History__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <length>150</length>
    <type>Text</type>
</CustomField>