src/Base/main/default/objects/Lead_Submission_History__c/fields/Model_of_Interest_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Model_of_Interest_Serial_Number__c</fullName>
    <label>Model of Interest Serial Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>