src/Base/main/default/objects/Lead_Submission_History__c/fields/Purchase_By_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_By_Date__c</fullName>
    <label>Purchase By Date</label>
    <length>150</length>
    <type>Text</type>
</CustomField>