src/Base/main/default/objects/Lead_Submission_History__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Serial Number</label>
    <referenceTo>GMBLASERP__Serial_Number__c</referenceTo>
    <relationshipLabel>Lead Submission Histories</relationshipLabel>
    <relationshipName>Lead_Submission_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>