src/Base/main/default/objects/Lead_Submission_History__c/fields/Special_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Special_Conditions__c</fullName>
    <label>Special Conditions</label>
    <type>TextArea</type>
</CustomField>