src/Base/main/default/objects/Lead_Submission_History__c/fields/Subscribe_to_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Subscribe_to_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscribe to Newsletter</label>
    <type>Checkbox</type>
</CustomField>