src/Base/main/default/objects/Lead_Submission_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lead_ID__c</columns>
    <columns>Email__c</columns>
    <columns>Form_Name__c</columns>
    <columns>Campaign__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>